gitea-service.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: gitea
    namespace: gitea
  spec:
    selector:
      app: gitea
    ports:
    - protocol: TCP
      port: 3000
