service.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: postgres
    namespace: gitea
    labels:
      app: postgres
  spec:
    ports:
    - name: postgres
      port: 5432
      targetPort: 5432
    selector:
      app: postgres
    clusterIP: None
---
  apiVersion: v1
  kind: Service
  metadata:
    name: gitea
    namespace: gitea
  spec:
    selector:
      app: gitea
    ports:
    - protocol: TCP
      port: 3000
