ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: dns-clusterissuer
spec:
  rules:
  - host: git.thejimnicholson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port: 
              number: 3000
  tls:
  - hosts:
    - git.thejimnicholson.com
    secretName: git.thejimnicholson.com
